; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_net_namespace.c_register_pernet_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_net_namespace.c_register_pernet_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pernet_operations = type { i32 }

@net_mutex = common dso_local global i32 0, align 4
@pernet_list = common dso_local global i32 0, align 4
@first_device = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @register_pernet_device(%struct.pernet_operations* %0) #0 {
  %2 = alloca %struct.pernet_operations*, align 8
  %3 = alloca i32, align 4
  store %struct.pernet_operations* %0, %struct.pernet_operations** %2, align 8
  %4 = call i32 @mutex_lock(i32* @net_mutex)
  %5 = load %struct.pernet_operations*, %struct.pernet_operations** %2, align 8
  %6 = call i32 @register_pernet_operations(i32* @pernet_list, %struct.pernet_operations* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load i32*, i32** @first_device, align 8
  %11 = icmp eq i32* %10, @pernet_list
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load %struct.pernet_operations*, %struct.pernet_operations** %2, align 8
  %14 = getelementptr inbounds %struct.pernet_operations, %struct.pernet_operations* %13, i32 0, i32 0
  store i32* %14, i32** @first_device, align 8
  br label %15

15:                                               ; preds = %12, %9, %1
  %16 = call i32 @mutex_unlock(i32* @net_mutex)
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @register_pernet_operations(i32*, %struct.pernet_operations*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
